--- a/ws/pom.xml
+++ b/ws/pom.xml
@@ -66,6 +66,12 @@
 			<artifactId>spring-boot-configuration-processor</artifactId>
 			<optional>true</optional>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.tika/tika-core -->
+		<dependency>
+			<groupId>org.apache.tika</groupId>
+			<artifactId>tika-core</artifactId>
+			<version>1.26</version>
+		</dependency>
 	</dependencies>
 
 	<build>
