--- a/ws/src/main/resources/application.yaml
+++ b/ws/src/main/resources/application.yaml
@@ -21,6 +21,10 @@ spring:  profiles: production
 hoaxify:  upload-path: storage-production
 ---
 spring:  profiles: dev
+  datasource:
+    url: jdbc:h2:./devdb
+    username: sa
+  jpa:    hibernate:      ddl-auto: update
 hoaxify:  upload-path: storage-dev
                 
 
